k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-demo-service
  namespace: demo-dev
spec:
  type: NodePort
  selector:
    app: platform-demo-service
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
